--- a/aabenbar.html
+++ b/aabenbar.html
@@ -30,7 +30,7 @@
                 <li>Html5</li>
                 <li>css3</li>
                 <li>javascript</li>
-                <li>photoshop</li>
+                <li>Audition</li>
                 <li>Premiere pro</li>
                 <h2>Link til redesign </h2>
                 <p>Kan ses her: <a href="http://mostvalue.dk/kea/03-content/03-redesign/03_02_08_redesign/index.html" target="_blank">Link</a></p>
@@ -39,12 +39,38 @@
 
             </div>
         </section>
+
+        <section id="responsive-video">
+            <div class="sectionwrapper">
+                <h1>Responsiv video</h1>
+                <!-- video -->
+                <div id="video-container">
+                    <video id="video" width="640" height="365">
+                        <source src="assets/aabenbar.mp4" type="video/mp4">
+                        <p>Your browser doesn't support HTML5 video.
+                            <a href="assets/aabenbar.mp4">Download</a> the video instead.
+                        </p>
+                    </video>
+                    <!-- Video Controls -->
+                    <div id="video-controls">
+                        <button type="button" id="play-pause">Play</button>
+                        <input type="range" id="seek-bar" value="0">
+                        <button type="button" id="mute">Mute</button>
+                        <input type="range" id="volume-bar" min="0" max="1" step="0.1" value="1">
+                        <button type="button" id="full-screen">Full-Screen</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
         <section id="koncept">
             <div class="sectionwrapper">
                 <h1>Faglige Mål</h1>
-                <h2>Kundecase</h2>
-                <p> Vi havde en kundecase som vi sluttede dette tema af med, denne gang var Sex & Samfund der blev de udvalgte. Vi havde med den forrige opgave hele tiden bygget op til denne opgave.
-                    Opgaven gik ud på at vi skulle lave et spil for unge i alderen 13-15 år.Selve spillet skulle skabe opmærksomhed omkring emnet billeddeling, og hvilke konsekvenser der medfølger ved at dele upassende og ulovlige billeder på f.eks. de sociale medier. Vores case gik ud på at vi skulle formidle privatsnak ud til folk.Selve spillet skulle skabe opmærksomhed omkring emnet billeddeling, og hvilke konsekvenser der medfølger ved at dele upassende og ulovlige billeder på f.eks. de sociale medier. Det var vores opgave at finde ud af, hvordan man kunne formidle det budskab på en interessant og alligevel informativ måde. Vi blev hurtigt enige i min gruppe at vi ville lave et enkelt spil, hvor der ikke var for meget andet end budskabet, og at brugeren hellere skulle følge med. Spillet går ud på at man skal hjælpe en pige, der står med hendes mobil i hånden, med hvad hun må dele og hvad hun ikke må dele. Der bliver stillet 6 spørgsmål, som fremgår som om at det er noget hun spørger sig selv om (i en tankeboble) og spilleren af spillet skal derefter trykke på del eller del ikke, som om at det var hende. Spilleren har tre liv. Hvis spilleren svare forkert 3 gange, taber personen spillet.
+                <h2>Formål </h2>
+                <p>Dette var vores anden opgave i forløbet grundlæggende video. Vi skulle finde en virskomhed og lave et redesign af deres hjemmeside, derudover skulle vi lave en reklame film, fra virksomheden. Min gruppe valgte virksomheden åbenbar, fordi deres hjemesiden trænkte til en kærlig hånd. Og det kunne vi hjælpe med. </p>
+                <h2>Anvendelse af teori</h2>
+                <p>I dette tema lærte vi om grundlæggende redskaber indenfor videoproduktion. Herunder forarbejde indefor selve optagelse, samt postproduktion. Vi benytter mobiltelefoner til at optage lyd og extern lyd. og primerer pro og audition til at optage med. Jeg valgte at bruge programmet premierer pro, til at redigerer vores reklame film i.Da vi fik undervisning i dette program, og det kan mere end andre redegeringsprogramemr.</p>
 
             </div>
         </section>
@@ -58,8 +84,7 @@
                 <img src="assets/styletile.jpg" alt="style">
                 <h2>Lighthouse Demos</h2>
                 <img src="assets/lightdemos.png" alt="mobil">
-                <h2>wires</h2>
-                <img src="assets/wireframes.png" alt="wire">
+
 
 
 
@@ -74,7 +99,6 @@
                 <img src="assets/kodevideo.png" alt="kode">
                 <img src="assets/mute.png" alt="kode">
                 <img src="assets/fullscreen.png" alt="kode">
-                <img src="assets/seekbar.png" alt="seek">
             </div>
         </section>
 
@@ -99,6 +123,7 @@
 
 
     <script src="script.js"></script>
+    <script src="videoscript.js"></script>
 </body>
 
 </html>
