--- a/designsprint.html
+++ b/designsprint.html
@@ -44,10 +44,10 @@
             <div class="sectionwrapper">
                 <h1>Faglige Mål</h1>
                 <h2>Formål</h2>
-                <p> Dette var vores første opgave, da vi startede på Københavns Erhvervs Akademi (KEA). Vi blev introduceret til de grundlæggende faglige begreber inden for design af digitale brugergrænseflader, her html og css. Samt indholdsproduktion, digital kommunikation og responsivt webdesign. Derudover fik vi de første hands-on færdigheder, inden for billedebehandling i photoshop, opsætning af tekst og billeder i adobe Indesign og Adobe XD.
+                <p> Dette var vores sidste tema inden eksamen. I dette forløb skulle vi lære samspillet mellem bruger og brugergrænseflader. Samt hvilke teorier,metoder,redskaber man kan bruge til test af produktion til digitale løsninger til smartphones. I den første uge udførte vi et designsprint sammen, i ugerne efterfølgende skulle vi selv udføre designsprintet først individuelt og derefter i grupper.
 
                     <h2> Anvendelse af teori</h2>
-                    <p>Jeg valgte at benytte Html og css, til at kode min stilartside. Vi blev sat i grupper, udvalgt af lærerne og fik til opgave at lave vores en hjemmeside, ud fra en stilart vi fik tildelt. Min gruppe fik tildelt stilarten ‘Postmodernisme’. Vi startede med at researche på stilarten, hvor vi kiggede på forskellige sider omkring hvad der var karaktertræk for postmodernisme. Der fandt vi fandt hurtigt ud af, at der var rigtig meget indhold og for det meste billede materiale. Efterfølgende skulle vi lave en segmentering og vælge et segment til vores stilart. Som vi så lavede en persona ud fra.</p>
+                    <p> I dette forløb skulle vi lære samspillet mellem bruger og brugergrænseflader jeg valgte at bruge designsprint til at løse opgaven Egen prototype, da de var den metode som vi lærte ugen forinden, og det giver en god stuktur om hvordan man skal opbygge sin process. </p>
 
             </div>
         </section>
@@ -55,8 +55,24 @@
         <section id="dokumentation">
             <div class="sectionwrapper">
                 <h1>Design dokumentation</h1>
+                <h2>Process</h2>
+                <li>Map</li>
+                <li>Sketch</li>
+                <li>Decide</li>
+                <li>Prototype</li>
+                <li>Test</li>
+                <h2>Long Term-goal</h2>
+                <p>Den første del i design-sprint er at finde et long term goal. Dette gjorde vi i fællesskab og vi kom frem til dette long-term goal og sprint-questions.</p>
+                <li>Om 2 år er KEA’s platform fuldt integreret med KEA’s hjemmeside og fungerer som intranet og undervisningsplatform på tværs af studier.</li>
+                <h2>Sprint-question</h2>
+                <li>Kan vi samle nyheder, notifikationer, meddelelser og skræddersy dem til brugeren?</li>
+                <li>Kan vi lave en kalender-funktion?</li>
+                <li>Kan vi lave en samlet platform af alle KEAs platforme?</li>
+
                 <h2>Map</h2>
+                <p>Vi finder udfordringerne i vores long term goal og sprint-questions ud fra et map </p>
                 <img src="assets/map.png" alt="map">
+                <p>Vi skitsere vores ideer ud fra forskellige sketch øvelser</p>
                 <h2>Sketch</h2>
                 <img src="assets/prosketch.png" alt="skitse">
                 <h2>Storyboard</h2>
@@ -69,7 +85,7 @@
 
         <section id="kodning">
             <div class="sectionwrapper">
-                <h1>Evaluering</h1>
+                <h1>Evaluering af design sprint</h1>
                 <h2>Jeg synes at lighting Demos fungerede bedst, da der var her vi skulle undersøge hvilke ting som fungerede bedst på apps og hjemmesider. De giver en god grundviden, om hvad der fungere og hvad der ikke gør? Jeg kunne godt lide at vi fik samlet alle vores ideer, som gav en god grundstruktur til at designe sin egen prototype. </h2>
 
             </div>
