--- a/nativeapp.html
+++ b/nativeapp.html
@@ -48,14 +48,44 @@
             <div class="sectionwrapper">
                 <h1>Faglige Mål</h1>
                 <h2>Formål</h2>
-                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, deleniti asperiores, dolore quis velit necessitatibus porro laboriosam quam reiciendis quasi maiores, doloremque obcaecati laudantium exercitationem aut laborum fugit! Eos, impedit.
+                <p>I dette forløb skulle vi lære samspillet mellem bruger og brugergrænseflader. Samt hvilke teorier,metoder,redskaber man kan bruge til test af produktion til digitale løsninger til smartphones. I den første uge udførte vi et designsprint sammen, i ugerne efterfølgende skulle vi selv udføre designsprintet først individuelt og derefter i grupper.
+                </p>
 
-                    <h2> Anvendelse af teori</h2>
-                    <p>Jeg valgte at benytte Html og css, til at kode min stilartside. Vi blev sat i grupper, udvalgt af lærerne og fik til opgave at lave vores en hjemmeside, ud fra en stilart vi fik tildelt. Min gruppe fik tildelt stilarten ‘Postmodernisme’. Vi startede med at researche på stilarten, hvor vi kiggede på forskellige sider omkring hvad der var karaktertræk for postmodernisme. Der fandt vi fandt hurtigt ud af, at der var rigtig meget indhold og for det meste billede materiale. Efterfølgende skulle vi lave en segmentering og vælge et segment til vores stilart. Som vi så lavede en persona ud fra.</p>
-
+                <h2> Anvendelse af teori</h2>
+                <p>Dette var vores sidste opgave i forløbet grundlæggende UX, ud fra de metoder og viden som vi havde fået i de forlæggende uger, skulle vi designe en prototype, som skulle hjælpe de studerende på Kea.Vi brugte programmet XD til at designe vores prototype i. I min gruppe sotd jeg for den visuelle stil, at farverne passede sammen, samtidtig hjalp jeg med opbygningen af skærmene.</p>
             </div>
         </section>
 
+        <section id="dokumentation">
+            <div class="sectionwrapper">
+                <h1>Design Sprint</h1>
+                <h2>Process</h2>
+                <li>Map</li>
+                <li>Sketch</li>
+                <li>Decide</li>
+                <li>Prototype</li>
+                <li>Test</li>
+                <h2>Long Term-goal</h2>
+                <p>Den første del i design-sprint er at finde et long term goal. Dette gjorde vi i fællesskab og vi kom frem til dette long-term goal og sprint-questions.</p>
+                <li>Alle bliver og deltager aktivt i timerne</li>
+                <h2>Sprint-question</h2>
+                <li>Kan vi samle nyheder, notifikationer, meddelelser og skræddersy dem til brugeren?</li>
+                <li>Kan vi lave en kalender-funktion?</li>
+                <li>Kan vi lave en samlet platform af alle KEAs platforme?</li>
+
+                <h2>Map</h2>
+                <p>Vi finder udfordringerne i vores long term goal og sprint-questions ud fra et map </p>
+                <img src="assets/nativemap.png" alt="map">
+                <p>Vi skitsere vores ideer ud fra forskellige sketch øvelser</p>
+                <h2>Sketch</h2>
+                <img src="assets/nativeappsketh.png" alt="skitse">
+                <h2>Deside</h2>
+                <img src="assets/desidenative.png" alt="skitser">
+
+
+
+            </div>
+        </section>
         <section id="dokumentation">
             <div class="sectionwrapper">
                 <h1>Design dokumentation</h1>
