--- a/sexsamfund.html
+++ b/sexsamfund.html
@@ -31,11 +31,13 @@
                 <li>css3</li>
                 <li>javascript</li>
                 <li>Illustrator</li>
+                <li>Audition</li>
+                <img src="assets/forsidep.png" alt="forside">
                 <h2>Link til spil </h2>
                 <p>Kan ses her: <a href="http://josefinewo.dk/kea/02-animation/sex-samfund/02.04_projekt/" target="_blank">Link</a></p>
                 <h2>Link til Dokumentationsside </h2>
                 <p>Kan ses her: <a href="http://josefinewo.dk/kea/02-animation/sex-samfund/gruppe-6_dokumentationssite/" target="_blank">Link</a></p>
-                <img src="assets/forsidep.png" alt="forside">
+
 
 
             </div>
@@ -45,8 +47,10 @@
             <div class="sectionwrapper">
                 <h1>Faglige Mål</h1>
                 <h2>Kundecase</h2>
-                <p> Vi havde en kundecase som vi sluttede dette tema af med, denne gang var Sex & Samfund der blev de udvalgte. Vi havde med den forrige opgave hele tiden bygget op til denne opgave.
-                    Opgaven gik ud på at vi skulle lave et spil for unge i alderen 13-15 år.Selve spillet skulle skabe opmærksomhed omkring emnet billeddeling, og hvilke konsekvenser der medfølger ved at dele upassende og ulovlige billeder på f.eks. de sociale medier. Vores case gik ud på at vi skulle formidle privatsnak ud til folk.Selve spillet skulle skabe opmærksomhed omkring emnet billeddeling, og hvilke konsekvenser der medfølger ved at dele upassende og ulovlige billeder på f.eks. de sociale medier. Det var vores opgave at finde ud af, hvordan man kunne formidle det budskab på en interessant og alligevel informativ måde. Vi blev hurtigt enige i min gruppe at vi ville lave et enkelt spil, hvor der ikke var for meget andet end budskabet, og at brugeren hellere skulle følge med. Spillet går ud på at man skal hjælpe en pige, der står med hendes mobil i hånden, med hvad hun må dele og hvad hun ikke må dele. Der bliver stillet 6 spørgsmål, som fremgår som om at det er noget hun spørger sig selv om (i en tankeboble) og spilleren af spillet skal derefter trykke på del eller del ikke, som om at det var hende. Spilleren har tre liv. Hvis spilleren svare forkert 3 gange, taber personen spillet.
+                <p> Vi havde en kundecase som vi sluttede dette tema af med, denne gang var Sex & Samfund der blev de udvalgte her privatsnak. Vi havde med den forrige opgave hele tiden bygget op til denne opgave.
+                    Opgaven gik ud på at vi skulle lave et spil for unge i alderen 13-15 år.Selve spillet skulle skabe opmærksomhed omkring emnet billeddeling, og hvilke konsekvenser der medfølger ved at dele upassende og ulovlige billeder på f.eks. de sociale medier.Det var vores opgave at finde ud af, hvordan man kunne formidle det budskab på en interessant og alligevel informativ måde.Vi blev hurtigt enige i min gruppe at vi ville lave et enkelt spil, hvor der ikke var for meget andet end budskabet, og at brugeren hellere skulle følge med.
+                    <h2>Pich</h2>
+                    <p> Spillet går ud på at man skal hjælpe en pige, der står med hendes mobil i hånden, med hvad hun må dele og hvad hun ikke må dele. Der bliver stillet 6 spørgsmål, som fremgår som om at det er noget hun spørger sig selv om (i en tankeboble) og spilleren af spillet skal derefter trykke på del eller del ikke, som om at det var hende. Spilleren har tre liv. Hvis spilleren svare forkert 3 gange, taber personen spillet.</p>
 
             </div>
         </section>
@@ -55,6 +59,7 @@
             <div class="sectionwrapper">
                 <h1>Design dokumentation</h1>
                 <h2>Moodboard Inspiration</h2>
+                <p>Til vores billede- og animations stilart, valgte at tage udgangspunkt i flat design - med inspiration fra kunstneren Helene Boutanos. Hun benytter en meget sensuel stil, med mørke farver og dybe kontraster. Dette har vi valgt fordi vi gerne vil give en “dyster” stemning på billederne, så folk opfanger at det er forkert at dele nøgenbilleder. Vi valgte at designe vores spilskærme i naturtro stil, så de unge mennesker kunne opfange at det var forkert at dele billeder. </p>
                 <img src="assets/Artboard61.png" alt="mood">
                 <h2>Produktions skitser</h2>
                 <p>Udarbedjdelse af spilskærm</p>
@@ -63,6 +68,8 @@
                 <h2>Diagrammer</h2>
                 <p>Aktivitetsdiagram</p>
                 <img src="assets/aktivitetsdiageam%20ss.png" alt="diagram">
+                <h2>Statemachine diagram</h2>
+                <img src="assets/Artboard%20102.png" alt="statemachine">
                 <p>Burn down charts</p>
                 <img src="assets/burndown.png" alt="burndowm">
                 <h2>Finansering</h2>
