--- a/animation.html
+++ b/animation.html
@@ -46,7 +46,7 @@
             <div class="sectionwrapper">
                 <h1>Faglige Mål</h1>
                 <h2>Formål</h2>
-                <p> I dette tema lærte viforskellige animationsteknikker, både visuelt og teknisk. Her,(Interaktivt spildesign baggrundsdesign, karakterdesign og grafisk spil) samt Javascript til at kode vores animationsspil i. Jeg valgte at bruge programmet adobe illustrater til at designe mine karakter og spilskærme.
+                <p> Dette var vores første opgave i temaet grundlæggende animation. Vi lærte viforskellige animationsteknikker, både visuelt og teknisk. Her,(Interaktivt spildesign baggrundsdesign, karakterdesign og grafisk spil) samt Javascript til at kode vores animationsspil i. Jeg valgte at bruge programmet adobe illustrater til at designe mine karakter og spilskærme.
 
             </div>
         </section>
